...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_picture_contact_details"
        app:layout_constraintWidth_percent="0.6"
        tools:hint="@string/username" />

    <EditText
        android:id="@+id/contact_details_given_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
        android:importantForAutofill="no"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_details_username"
        app:layout_constraintWidth_percent="0.6"
        tools:hint="@string/username" />

    <ImageView
        android:id="@+id/button_update_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:src="@drawable/forward_arrow"
        android:text="@string/create_account"
        android:textColor="@color/white"
...
