...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:id="@+id/singleContact"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContact"
        android:layout_width="match_parent"
        android:layout_height="80dp"
...
