<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_secondary"
    android:fitsSystemWindows="true">


    <View
        android:id="@+id/create_password_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_border_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.95" />

    <!--    Remove this line from View component to center the container vertically-->
    <!--    app:layout_constraintVertical_bias="0.3"-->


    <ImageView
        android:id="@+id/avatar_create_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/create_password_container"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="@+id/create_password_container"
        app:layout_constraintTop_toTopOf="@+id/create_password_container"
        app:layout_constraintWidth_percent="0.4"
        tools:src="@drawable/cloud_logo" />

    <TextView
        android:id="@+id/drongo_textview_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/drongo"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create_password_container"
        app:layout_constraintStart_toStartOf="@+id/create_password_container"
        app:layout_constraintTop_toBottomOf="@id/avatar_create_password" />

    <TextView
        android:id="@+id/slogan_textview_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/slogan_password"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create_password_container"
        app:layout_constraintStart_toStartOf="@+id/create_password_container"
        app:layout_constraintTop_toBottomOf="@id/drongo_textview_create_password" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
        android:hint="@string/choose_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/create_password_container"
        app:layout_constraintStart_toStartOf="@+id/create_password_container"
        app:layout_constraintTop_toBottomOf="@+id/slogan_textview_create_password"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/confirmation_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_password_strength"
        app:layout_constraintWidth_percent="0.7" />

    <ImageView
        android:id="@+id/button_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:src="@drawable/forward_arrow"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/confirmation_register"
        app:layout_constraintTop_toTopOf="@+id/confirmation_register" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/create_password_container"
        app:layout_constraintStart_toStartOf="@+id/create_password_container"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/lbl_password_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/confirmation_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        tools:text="STRONG" />

    <ImageView
        android:id="@+id/back_button_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/back_button_blue"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/create_password_container"
        app:layout_constraintTop_toTopOf="@+id/avatar_create_password" />

    <ImageView
        android:id="@+id/info_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/ic_info"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/create_password_container"
        app:layout_constraintTop_toTopOf="@+id/create_password_container" />

</androidx.constraintlayout.widget.ConstraintLayout>