...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/avatar_picker"
        app:layout_constraintEnd_toEndOf="@+id/avatar_picker"
        app:layout_constraintStart_toStartOf="@+id/avatar_picker"
        tools:text="@string/username" />


    <!--    Remove this line from View component to center the container vertically-->
...
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="@id/avatar_container"
        app:layout_constraintTop_toTopOf="@+id/avatar_container"
        app:layout_constraintWidth_percent="0.90" />

    <Button
        android:id="@+id/choose_avatar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_button"
        android:clickable="true"
        android:focusable="true"
...
