...
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="@+id/register_username_container"
        app:layout_constraintTop_toTopOf="@+id/logo_typography" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="211dp"
        android:layout_height="35dp"

        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_border_input"
        android:ems="10"
...
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_textview_register_username"
        app:layout_constraintWidth_percent="0.7" />

    <ImageView
        android:id="@+id/next_button_register_username"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="313dp"
        android:background="@drawable/ic_next_icon"
        app:layout_constraintEnd_toEndOf="@+id/register_username_container"
...
